--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,7 @@
 [build]
-  command = "FORCE_COLOR=true npm run build && npm run export"
+  command = "FORCE_COLOR=true GENERATE_QR_CODES=false npm run build && npm run export"
   publish = "out/"
 [[plugins]]
   package = "netlify-plugin-cache-nextjs"
+[[plugins]]
+  package = "./plugins/cache"
