--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "google-spreadsheet": "^3.0.11",
     "googleapis": "^58.0.0",
     "husky": "^4.2.5",
+    "klaw": "^3.0.0",
     "link-check": "^4.5.0",
     "p-each-series": "^2.1.0"
   }
