changing short links to use id hash

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lodash": "^4.17.20",
     "p-each-series": "^2.1.0",
     "rgb-hex": "^3.0.0",
-    "sharp": "^0.25.4"
+    "sharp": "^0.25.4",
+    "short-hash": "^1.0.0"
   }
 }
